added about page

--- a/index.html
+++ b/index.html
@@ -61,6 +61,28 @@
 
         <!-- ABOUT -->
 
+        <section class="about section" id="about">
+            <h2 class="section-title">About</h2>
+
+            <div class="about_container bd-grid">
+                <div class="about_img">
+                    <img src="Assert/img/august.png" alt="">
+                </div>
+
+                <div>
+                    <h2 class="about_subtitle">I'am Samuel Ekpo</h2>
+                    <span class="about_profession">Graphic Designer</span>
+                    <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dicta sapiente consectetur! Assumenda, magni minima.</p>
+
+                    <div class="about_social">
+                        <a href="#" class="about_social-icon"><i class='bx bxl-facebook'></i></a>
+                        <a href="#" class="about_social-icon"><i class='bx bxl-instagram'></i></a>
+                        <a href="#" class="about_social-icon"><i class='bx bxl-twitter'></i></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- SKILLS -->
 
         <!-- PORTFOLIO -->
