added skills and portfplio

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                     <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dicta sapiente consectetur! Assumenda, magni minima.</p>
 
                     <div class="about_social">
-                        <a href="#" class="about_social-icon"><i class='bx bxl-facebook'></i></a>
-                        <a href="#" class="about_social-icon"><i class='bx bxl-instagram'></i></a>
-                        <a href="#" class="about_social-icon"><i class='bx bxl-twitter'></i></a>
+                        <a href="https://web.facebook.com/samuel.ekpo.104" class="about_social-icon"><i class='bx bxl-facebook'></i></a>
+                        <a href="https://www.instagram.com/Samwisekpo" class="about_social-icon"><i class='bx bxl-instagram'></i></a>
+                        <a href="https://twitter.com/Austinsamekpo2" class="about_social-icon"><i class='bx bxl-twitter'></i></a>
                     </div>
                 </div>
             </div>
@@ -85,7 +85,86 @@
 
         <!-- SKILLS -->
 
+        <section class="skills section bd-grid" id="skills">
+            <h2 class="section-title">Skills</h2>
+
+            <div class="skills_container bd-grid">
+                <div class="skills_box">
+                    <h3 class="skills_subtitle">Development</h3>
+                    <span class="skills_name">Creativity</span>
+                    <span class="skills_name">Communication</span>
+                    <span class="skills_name">Adobe’s creative apps</span>
+                    <span class="skills_name">Branding </span>
+                    <span class="skills_name">Delivering presentations</span>
+                    <span class="skills_name">Typography</span>
+
+                    <h3 class="skills_subtitle">Desginer</h3>
+                    <span class="skills_name">Figma</span>
+                    <span class="skills_name">Photoshop</span>
+                    <span class="skills_name">Adobe XD</span>
+                </div>
+
+                <div class="skills_img">
+                    <img src="Assert/img/skill.jpg" alt="">
+                </div>
+            </div>
+        </section>
+
         <!-- PORTFOLIO -->
+
+        <section class="portfolio section" id="portfolio">
+            <h2 class="section-title">Portfolio</h2>
+
+            <div class="portfolio_container bd-grid">
+                <div class="portfolio_img">
+                    <img src="assert/img/work1.jpg" alt="">
+
+                    <div class="portfolio_link">
+                        <a href="#" class="portfolio_link-name">View Details</a>
+                    </div>
+                </div>
+
+                <div class="portfolio_img">
+                    <img src="assert/img/work2.jpg" alt="">
+
+                    <div class="portfolio_link">
+                        <a href="#" class="portfolio_link-name">View Details</a>
+                    </div>
+                </div>
+
+                <div class="portfolio_img">
+                    <img src="assert/img/work3.jpg" alt="">
+
+                    <div class="portfolio_link">
+                        <a href="#" class="portfolio_link-name">View Details</a>
+                    </div>
+                </div>
+
+                <div class="portfolio_img">
+                    <img src="assert/img/work4.jpg" alt="">
+
+                    <div class="portfolio_link">
+                        <a href="#" class="portfolio_link-name">View Details</a>
+                    </div>
+                </div>
+
+                <div class="portfolio_img">
+                    <img src="assert/img/work5.jpg" alt="">
+
+                    <div class="portfolio_link">
+                        <a href="#" class="portfolio_link-name">View Details</a>
+                    </div>
+                </div>
+
+                <div class="portfolio_img">
+                    <img src="assert/img/work6.jpg" alt="">
+
+                    <div class="portfolio_link">
+                        <a href="#" class="portfolio_link-name">View Details</a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!-- CONTACT -->
     </main>
