--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 
         <section class="home" id="home">
             <div class="home_container bd-grid">
-                <h1 class="home_title"><span>HE</span><br>LLO.</h1>
+                <h1 class="home_title des"><span>HE</span><br>LLO.</h1>
 
                 <div class="home_scroll">
-                    <a href="#about" class="home_scroll-link"><i class='bx bx-up-arrow-alt'></i>Scroll Down</a>
+                    <a href="#about" class="home_scroll-link"><i class='bx bx-down-arrow-alt'></i></a>
                 </div>
 
                 <img src="Assert/img/august.png" alt="" class="home_img">
@@ -167,11 +167,65 @@
         </section>
 
         <!-- CONTACT -->
+
+        <section class="contact section" id="contact">
+            <h2 class="section-title">Contact</h2>
+
+            <div class="contact_container bd-grid">
+                <div class="contact_info">
+                    <h3 class="contact_subtitle">Email</h3>
+                    <span class="contact_text">info@mail.com</span>
+
+                    <h3 class="contact_subtitle">Phone</h3>
+                    <span class="contact_text">+2345670898</span>
+
+                    <h3 class="contact_subtitle">Address</h3>
+                    <span class="contact_text">No.0 Road Drive</span>
+                </div>
+
+                <form action="" class="contact_form">
+                    <div class="contact_inputs">
+                        <input type="text" placeholder="Name" class="contact_input">
+                        <input type="mail" placeholder="Email" class="contact_input">
+                    </div>
+
+                    <textarea name="" id="" cols="0" rows="10" class="contact_input"></textarea>
+
+                    <input type="submit" value="Send" class="contact_button">
+                </form>
+            </div>
+        </section>
+
     </main>
 
-
-
     <!-- FOOTER -->
+
+    <footer class="footer section">
+        <div class="footer_container bd-grid">
+            <div class="footer_data">
+                <h2 class="footer_title">SAMMY</h2>
+                <p class="footer_text">I am Samuel Ekpo and this is my personal website</p>
+            </div>
+
+            <div class="footer_data">
+                <h2 class="footer_title">EXPLORE</h2>
+                <ul>
+                    <li><a href="#home" class="footer_link">Home</a></li>
+                    <li><a href="#about" class="footer_link">About</a></li>
+                    <li><a href="#skills" class="footer_link">Skills</a></li>
+                    <li><a href="#portfolio" class="footer_link">Portfolio</a></li>
+                    <li><a href="#contact" class="footer_link">Contact</a></li>
+                </ul>
+            </div>
+
+            <div class="footer_data">
+                <h2 class="footer_title">FOLLOW</h2>
+                <a href="https://web.facebook.com/samuel.ekpo.104" class="footer_social"><i class='bx bxl-facebook'></i></a>
+                <a href="https://www.instagram.com/Samwisekpo" class="footer_social"><i class='bx bxl-instagram'></i></a>
+                <a href="https://twitter.com/Austinsamekpo2" class="footer_social"><i class='bx bxl-twitter'></i></a>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="js/main.js"></script>
