changed some text

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
 
                 <div>
-                    <h2 class="about_subtitle">I'am Samuel Ekpo</h2>
+                    <h2 class="about_subtitle">I'm Samuel Ekpo</h2>
                     <span class="about_profession">Graphic Designer</span>
                     <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dicta sapiente consectetur! Assumenda, magni minima.</p>
 
@@ -98,10 +98,17 @@
                     <span class="skills_name">Delivering presentations</span>
                     <span class="skills_name">Typography</span>
 
-                    <h3 class="skills_subtitle">Desginer</h3>
-                    <span class="skills_name">Figma</span>
+                    <h3 class="skills_subtitle">What I Do</h3>
+                    <span class="skills_name">Logo design</span>
+                    <span class="skills_name">Photo manipulation</span>
+                    <span class="skills_name">poster and flyer design</span>
+                    <span class="skills_name">Brochures and e book covers</span>
+                    <span class="skills_name">and lots more</span>
+
+                    <h3 class="skills_subtitle">Designer</h3>
                     <span class="skills_name">Photoshop</span>
-                    <span class="skills_name">Adobe XD</span>
+                    <span class="skills_name">Adobe Illustrator</span>
+                    <span class="skills_name">InDesign</span>
                 </div>
 
                 <div class="skills_img">
@@ -174,13 +181,13 @@
             <div class="contact_container bd-grid">
                 <div class="contact_info">
                     <h3 class="contact_subtitle">Email</h3>
-                    <span class="contact_text">info@mail.com</span>
+                    <span class="contact_text"> austinsamekpo@gmail.com</span>
 
                     <h3 class="contact_subtitle">Phone</h3>
-                    <span class="contact_text">+2345670898</span>
+                    <span class="contact_text">+2348103543297</span>
 
                     <h3 class="contact_subtitle">Address</h3>
-                    <span class="contact_text">No.0 Road Drive</span>
+                    <span class="contact_text">26 mbonu street,Dline,Port Harcourt,Nigeria</span>
                 </div>
 
                 <form action="" class="contact_form">
