--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div>
                     <h2 class="about_subtitle">I'm Samuel Ekpo</h2>
                     <span class="about_profession">Graphic Designer</span>
-                    <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dicta sapiente consectetur! Assumenda, magni minima.</p>
+                    <p class="about_text">"with proficiency in adobe creative suites.I believe in Great designs and I have no doubt you do too... "</p>
 
                     <div class="about_social">
                         <a href="https://web.facebook.com/samuel.ekpo.104" class="about_social-icon"><i class='bx bxl-facebook'></i></a>
