--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!-- HEADER  -->
     <header class="l-header">
         <nav class="nav bd-grid">
+
+
+
             <div>
                 <a href="#" class="nav_logo">Sammy</a>
             </div>
@@ -36,6 +39,10 @@
                         <a href="#contact" class="nav_link">Contact</a>
                     </li>
                 </ul>
+
+                <div class="toggle-btn">
+                    <i class='bx bx-adjust'></i>
+                </div>
             </div>
 
             <div class="nav_toggle" id="nav-toggle">
